  ``only_edges=True``. (#1885)
- The WKT representation of a MULTIPOINT changed from for example "MULTIPOINT (0 0, 1 1)"
  to "MULTIPOINT ((0 0), (1 1))". (#1885)

Deprecations:

- The ``shapely.geos`` module is deprecated. All GEOS-version related attributes are
  available directly from the top-level ``shapely`` namespace as well (already since
  shapely 2.0) (#2145).

Packaging:

- Binary wheels are now built for musllinux (Alpine) x86_64 platforms (#1996).


2.0.6 (2024-08-19)
------------------

Bug fixes:

- Fix compatibility with NumPy 2.1.0 (#2099).

Wheels are available for Python 3.13 (and still include GEOS 3.11.4).

2.0.5 (2024-07-13)
------------------

Binary wheels on PyPI include GEOS 3.11.4 from 2024-06-05. Furthermore,
universal2 wheels are removed for macOS since both x86_64 and arm64 wheels are
provided.

Bug fixes:

- Fix Point x/y/z attributes to return Python floats (#2074).
- Fix affinity for Apple silicon with NumPy 2.0 by reverting matmul, and
  use direct matrix multiplication instead (#2085).

2.0.4 (2024-04-16)
------------------

Wheels for Python versions >= 3.9 will be compatible with the upcoming NumPy 2.0
release (as well as with supported NumPy 1.x versions).

Bug fixes:

- Fix bug in ``to_wkt`` with multiple empty Z geometries (#2012).
- Fix bug in ``to_ragged_array`` for an array of Points with missing values (#2034).


2.0.3 (2024-02-16)
------------------

- Fix regression in the ``oriented_envelope`` ufunc to accept array-like input
  in case of GEOS<3.12 (#1929).
- The binary wheels are not yet compatible with a future NumPy 2.0 release,
  therefore a ``numpy<2`` upper pin was added to the requirements (#1972).
- Upgraded the GEOS version in the binary wheel distributions to 3.11.3.


2.0.2 (2023-10-12)
------------------

Bug fixes:

- Fix regression in the (in)equality comparison (``geom1 == geom2``) using ``__eq__`` to
  not ignore the z-coordinates (#1732).